--- a/site certo certo/pages/formularios.html
+++ b/site certo certo/pages/formularios.html
@@ -23,20 +23,16 @@
 				<section>
 					<div class="form-header">
 						<div class="avartar">
-							<a href="#">
-								<img src="images/avartar.png" alt="">
+							<a href="#" >
+								<img src="../imagens/Formulario/perfil.jpg" class="perfil" alt="">
 							</a>
 							<div class="avartar-picker">
 								<input type="file" name="file-1[]" id="file-1" class="inputfile"
 									data-multiple-caption="{count} files selected" multiple />
-								<label for="file-1">
-									<i class="zmdi zmdi-camera"></i>
-									<span>Choose Picture</span>
-								</label>
 							</div>
 						</div>
 						<div class="form-group">
-							<h1 class="titulo">Cadastro</h1>
+			
 							<div class="form-holder active">
 								<input type="text" placeholder="Nome Completo" class="form-control">
 							</div>
@@ -58,16 +54,12 @@
 				<section>
 					<div class="form-header">
 						<div class="avartar">
-							<a href="#">
-								<img src="images/avartar.png" alt="">
+							<a href="#" >
+								<img src="../imagens/Formulario/creatina.jpg" class="produto" alt="">
 							</a>
 							<div class="avartar-picker">
 								<input type="file" name="file-1[]" id="file-1" class="inputfile"
 									data-multiple-caption="{count} files selected" multiple />
-								<label for="file-1">
-									<i class="zmdi zmdi-camera"></i>
-									<span>Choose Picture</span>
-								</label>
 							</div>
 						</div>
 						<div class="form-group">
@@ -89,7 +81,7 @@
 				<!-- SECTION 3 -->
 				<h4></h4>
 				<section>
-					<h1 class="titulo">Login</h1>
+			
 					<div class="form-header">
 						<div class="avartar">
 							<a href="#">
