--- a/site certo certo/pages/Abrir por aqui.html
+++ b/site certo certo/pages/Abrir por aqui.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nexpharm Suplementos</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nexpharm Suplementos</title>
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
 
-  <style>
-    /* Gradiente global */
-    .text-gradient {
-      background: linear-gradient(90deg, rgb(255, 140, 0), rgb(106, 13, 173));
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-  </style>
-</head>
+    <style>
+      /* Gradiente global */
+      .text-gradient {
+        background: linear-gradient(90deg, rgb(255, 140, 0), rgb(106, 13, 173));
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+    </style>
+  </head>
 
-<body>
+  <body>
 
-  <!-- NAVBAR -->
-  <nav class="navbar sticky-top  navbar-expand-lg navbar-dark"
-    style="background: linear-gradient(90deg, rgb(255, 140, 0), rgb(106, 13, 173));">
+    <!-- NAVBAR -->
+    <nav class="navbar sticky-top  navbar-expand-lg navbar-dark"
+      style="background: linear-gradient(90deg, rgb(255, 140, 0), rgb(106, 13, 173));">
     <div class="container">
       <a class="navbar-brand" href="#">
         <img src="../imagens/logo_sem_fundo (1).png" alt="Logo" height="60">
@@ -126,7 +126,7 @@
     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
      <div class="col">
   <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-    style="background-image: url('../imagens/produtos/creatinaKit 1.png'); 
+    style="background-image: url('../imagens/produtos/Frame\ 3\ \(1\).png'); 
            background-repeat: no-repeat; 
            background-size: contain; 
            background-position: center;">
