--- a/site certo certo/pages/Abrir por aqui.html
+++ b/site certo certo/pages/Abrir por aqui.html
@@ -281,7 +281,7 @@
         </div>
       </div>
       <div class="text-center mt-4 text-muted">
-        © 2025 Nexpharm Suplementos. Todos os direitos reservados.
+        © 2025 Nexpharm Suplementos. Todos os direitos reservados
       </div>
     </div>
   </footer>
