--- a/site certo certo/pages/Abrir por aqui.html
+++ b/site certo certo/pages/Abrir por aqui.html
@@ -23,29 +23,29 @@
 <body>
 
   <!-- NAVBAR -->
-  <nav class="navbar sticky-top  navbar-expand-lg navbar-dark"
-    style="background: linear-gradient(90deg, rgb(255, 140, 0), rgb(106, 13, 173));">
-    <div class="container">
-      <a class="navbar-brand" href="Abrir por aqui.html">
-        <img src="../imagens/logo-completa.png" alt="Logo" height="60">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <nav class="navbar sticky-top  navbar-expand-lg navbar-dark"
+      style="background: linear-gradient(90deg, rgb(255, 140, 0), rgb(106, 13, 173));">
+      <div class="container">
+        <a class="navbar-brand" href="Abrir por aqui.html">
+          <img src="../imagens/logo-completa.png" alt="Logo" height="60">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav mx-auto">
-          <li class="nav-item"><a class="nav-link active fs-5" href="Abrir por aqui.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link fs-5" href="#">Produtos</a></li>
-          <li class="nav-item"><a class="nav-link fs-5" href="#">Contato</a></li>
-        </ul>
-        <div class="d-flex gap-2">
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav mx-auto">
+            <li class="nav-item"><a class="nav-link active fs-5" href="Abrir por aqui.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link fs-5" href="#">Produtos</a></li>
+            <li class="nav-item"><a class="nav-link fs-5" href="#">Contato</a></li>
+          </ul>
+          <div class="d-flex gap-2">
 
+          </div>
         </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 
   <!-- CAR -->
   <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -126,18 +126,14 @@
     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
 
       <!-- Card 1 -->
-      <div class="col">
-        <div class="card card-cover h-100 overflow-hidden rounded-4 shadow-lg" style="background: linear-gradient(90deg, rgba(255,140,0,0.01), rgba(106,13,173,0.01)),
-               url('../imagens/produtos/Frame 3 (1).png') center/contain no-repeat;">
+     <div class="col">
+        <div class="card card-cover h-100 overflow-hidden rounded-4 shadow-lg" style="background: linear-gradient(135deg, rgba(255,140,0,0.9), rgba(106,13,173,0.9)),
+               url('unsplash-photo-2.jpg') center/cover no-repeat;">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Creatina</h3>
+            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Pré Treino</h3>
             <ul class="d-flex list-unstyled mt-auto">
               <li class="me-auto">
-                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-                  class="bi bi-1-circle-fill" viewBox="0 0 16 16">
-                  <path
-                    d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M9.283 4.002H7.971L6.072 5.385v1.271l1.834-1.318h.065V12h1.312z" />
-                </svg>
+              <img src="../imagens/image 1.png" alt="Bootstrap" width="32" height="32" class="  ">
               </li>
             </ul>
           </div>
@@ -152,11 +148,7 @@
             <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Pré Treino</h3>
             <ul class="d-flex list-unstyled mt-auto">
               <li class="me-auto">
-                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-                  class="bi bi-2-circle-fill" viewBox="0 0 16 16">
-                  <path
-                    d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M6.646 6.24c0-.691.493-1.306 1.336-1.306.756 0 1.313.492 1.313 1.236 0 .697-.469 1.23-.902 1.705l-2.971 3.293V12h5.344v-1.107H7.268v-.077l1.974-2.22.096-.107c.688-.763 1.287-1.428 1.287-2.43 0-1.266-1.031-2.215-2.613-2.215-1.758 0-2.637 1.19-2.637 2.402v.065h1.271v-.07Z" />
-                </svg>
+                <img src="../imagens/image 1.png" alt="Bootstrap" width="32" height="32" class="  ">
               </li>
             </ul>
           </div>
@@ -235,29 +227,9 @@
   </div>
 
 
-  <main>
   
-      
-  </main>
 
   <!-- MAIS VENDIDOS -->
-  <div class="container my-5">
-    <h2 class="text-center fw-bold mb-4">MAIS VENDIDOS</h2>
-    <div class="row g-4">
-      <div class="col-md-6 text-center">
-        <img src="../imagens/produtos/criatividade-5.png" class="img-fluid rounded">
-      </div>
-      <div class="col-md-6 text-center">
-        <img src="../imagens/riatividade4.png" class="img-fluid rounded">
-      </div>
-      <div class="col-md-6 text-center">
-        <img src="../imagens/layanelinda.png" class="img-fluid rounded">
-      </div>
-      <div class="col-md-6 text-center">
-        <img src="../imagens/layanelinda2.png" class="img-fluid rounded">
-      </div>
-    </div>
-  </div>
 
 
 
