--- a/site certo certo/pages/pagamento.html
+++ b/site certo certo/pages/pagamento.html
@@ -20,7 +20,7 @@
 <body style="background-color: rgba(106, 13, 173, 0.5);">
   <!-- Navbar -->
   <nav class="navbar sticky-top navbar-expand-lg navbar-dark"
-    style="background: linear-gradient(90deg, rgb(255, 140, 0), rgb(106, 13, 173), rgba(255,255,255,0.8));">
+    style="background: linear-gradient(90deg, rgb(255, 140, 0), rgb(106, 13, 173));">
     <div class="container">
       <a class="navbar-brand" href="Abrir por aqui.html">
         <img src="../imagens/logo-completa.png" alt="Logo da Empresa" height="60">
