--- a/site certo certo/pages/cadastro.html
+++ b/site certo certo/pages/cadastro.html
@@ -6,60 +6,60 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta name="description" content="This is a login page template based on Bootstrap 5">
 	<title>Bootstrap 5 Login Page</title>
-  <link rel="stylesheet" href="../css/bootstrap.min.css">
-  <link rel="stylesheet" href="../css/button/button.css">
-	  </head>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+	<link rel="stylesheet" href="../css/button/button.css">
+</head>
 
 <body style="background: linear-gradient(90deg, rgb(255, 140, 0), rgb(106, 13, 173));">
-
-  
 	<section class="h-100">
 		<div class="container h-100">
 			<div class="row justify-content-sm-center h-100">
 				<div class="col-xxl-4 col-xl-5 col-lg-5 col-md-7 col-sm-9">
-					<div class="text-center my-5">
-
-						<a href="Abrir por aqui.html"> <img src="../imagens/image 1.png" alt="logo" width="100"></a>
+					<div class="text-center my-5"><a href="Abrir por aqui.html"><img src="../imagens/image 1.png" alt="logo" width="100"></a>
+						
 					</div>
 					<div class="card shadow-lg">
 						<div class="card-body p-5">
-							<h1 class="fs-4 card-title fw-bold mb-4">Login</h1>
+							<h1 class="fs-4 card-title fw-bold mb-4">Cadastro</h1>
 							<form method="POST" class="needs-validation" novalidate="" autocomplete="off">
 								<div class="mb-3">
-									<label class="mb-2 text-muted" for="email">E-Mail </label>
-									<input id="email" type="email" class="form-control" name="email" value="" required autofocus>
+									<label class="mb-2 text-muted" for="name">Nome</label>
+									<input id="name" type="text" class="form-control" name="name" value="" required autofocus>
+									<div class="invalid-feedback">
+										Name is required	
+									</div>
+								</div>
+
+								<div class="mb-3">
+									<label class="mb-2 text-muted" for="email">E-Mail</label>
+									<input id="email" type="email" class="form-control" name="email" value="" required>
 									<div class="invalid-feedback">
 										Email is invalid
 									</div>
 								</div>
 
 								<div class="mb-3">
-									<div class="mb-2 w-100">
-										<label class="text-muted" for="password">Senha</label>
-										<a href="forgot.html" class="float-end">
-											Esqueceu sua senha?
-										</a>
-									</div>
+									<label class="mb-2 text-muted" for="password">Senha</label>
 									<input id="password" type="password" class="form-control" name="password" required>
 								    <div class="invalid-feedback">
 								    	Password is required
 							    	</div>
 								</div>
 
-								<div class="d-flex align-items-center">
-									<div class="form-check">
-										<input type="checkbox" name="remember" id="remember" class="form-check-input">
-										<label for="remember" class="form-check-label">Lembrar-me</label>
-									</div>
+								<p class="form-text text-muted mb-3">
+									Ao se registrar, você concorda com nossos termos e condições.
+								</p>
+
+								<div class="align-items-center d-flex">
 									<button type="submit" class="btn bg-roxo ms-auto">
-										Login
+										Cadastrar
 									</button>
 								</div>
 							</form>
 						</div>
 						<div class="card-footer py-3 border-0">
 							<div class="text-center">
-								Não tem uma conta? <a href="cadastro.html" class="text-dark">Cadastrar </a>
+								Já tem uma conta?  <a href="login.html" class="text-dark">Entrar</a>
 							</div>
 						</div>
 					</div>
