--- a/site certo certo/pages/area de compra.html
+++ b/site certo certo/pages/area de compra.html
@@ -172,7 +172,7 @@
 
   <header>
     <a href="../pages/carrosel.html">INÍCIO</a>
-    <a href="../pages/parte dos produtos.html">PRODUTOS</a>
+    <a href="../pages/produtos.html">PRODUTOS</a>
     <a href="../pages/cadastro.html">SUPORTE</a>
     <a href="../pages/sobre.html">SOBRE</a>
   </header>
