--- a/site certo certo/pages/cadastro.html
+++ b/site certo certo/pages/cadastro.html
@@ -15,7 +15,7 @@
 		<div class="container h-100">
 			<div class="row justify-content-sm-center h-100">
 				<div class="col-xxl-4 col-xl-5 col-lg-5 col-md-7 col-sm-9">
-					<div class="text-center my-5"><a href="Abrir por aqui.html"><img src="../imagens/image 1.png" alt="logo" width="100"></a>
+					<div class="text-center my-5"><a href="home.html"><img src="../imagens/image 1.png" alt="logo" width="100"></a>
 						
 					</div>
 					<div class="card shadow-lg">
