--- a/site certo certo/pages/loja_de_produtos.html
+++ b/site certo certo/pages/loja_de_produtos.html
@@ -142,7 +142,7 @@ font-family: Georgia, 'Times New Roman', Times, serif;
    <header class="topo pd">
         <div class="box1">
             <a href="" class="bt1">INICIO</a>
-            <a href="../pages/parte dos produtos.html" class="bt1">PRODUTOS</a>
+            <a href="../pages/produtos.html" class="bt1">PRODUTOS</a>
             <a href="../pages/cadastro.html" class="bt1">CADASTRO</a>
             <a href="../pages/SUPORTE.html" class="bt1">SUPORTE</a>
         </div>
