--- a/site certo certo/pages/produtos.html
+++ b/site certo certo/pages/produtos.html
@@ -220,11 +220,11 @@
   <header>
     <img src="../imagens/logo_sem_fundo (1).png" alt="Logo Nexpharm" class="logo">
     <nav>
-      <a href="../pages/carrosel.html">Início</a>
-      <a href="../pages/parte dos produtos.html">Produtos</a>
+      <a href="../pages/home.html">Início</a>
+      <a href="../pages/produtos.html">Produtos</a>
       <a href="../pages/SUPORTE.html">Suporte</a>
     </nav>
-    <button class="btn-login" onclick="location.href='tela de inicio.html'">Entrar</button>
+    <button class="btn-login" onclick="location.href='../pages/Login.html'">Entrar</button>
   </header>
 
   <!-- BARRA DE PESQUISA -->
