--- a/site certo certo/pages/sobre.html
+++ b/site certo certo/pages/sobre.html
@@ -78,7 +78,7 @@ button{
     <header class="topo">
         <div class="box1">
             <a href="../pages/inicio.html" class="bt1">INICIO</a>
-            <a href="../pages/parte dos produtos.html" class="bt1">PRODUTOS</a>
+            <a href="../pages/produtos.html" class="bt1">PRODUTOS</a>
             <a href="../pages/SUPORTE.html" class="bt1">SUPORTE</a>
             <a href="../pages/sobre.html" class="bt1">SOBRE</a>
         </div>
