--- a/site certo certo/pages/Login.html
+++ b/site certo certo/pages/Login.html
@@ -19,7 +19,7 @@
 				<div class="col-xxl-4 col-xl-5 col-lg-5 col-md-7 col-sm-9">
 					<div class="text-center my-5">
 
-						<a href="Abrir por aqui.html"> <img src="../imagens/image 1.png" alt="logo" width="100"></a>
+						<a href="home.html"> <img src="../imagens/image 1.png" alt="logo" width="100"></a>
 					</div>
 					<div class="card shadow-lg">
 						<div class="card-body p-5">
