--- a/site certo certo/pages/home.html
+++ b/site certo certo/pages/home.html
@@ -26,7 +26,7 @@
     <nav class="navbar sticky-top  navbar-expand-lg navbar-dark"
       style="background: linear-gradient(90deg, rgb(255, 140, 0), rgb(106, 13, 173));">
       <div class="container">
-        <a class="navbar-brand" href="Abrir por aqui.html">
+        <a class="navbar-brand" href="../pages/home.html">
           <img src="../imagens/logo-completa.png" alt="Logo" height="60">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -36,9 +36,9 @@
 
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mx-auto">
-            <li class="nav-item"><a class="nav-link active fs-5" href="Abrir por aqui.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link fs-5" href="#">Produtos</a></li>
-            <li class="nav-item"><a class="nav-link fs-5" href="#">Contato</a></li>
+            <li class="nav-item"><a class="nav-link active fs-5" href="../pages/home.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link fs-5" href="../pages/produtos.html">Produtos</a></li>
+            <li class="nav-item"><a class="nav-link fs-5" href="../pages/SUPORTE.html">Contato</a></li>
           </ul>
           <div class="d-flex gap-2">
 
@@ -186,7 +186,7 @@
           Oferecemos os melhores suplementos, vitaminas e produtos manipulados para cuidar da sua saúde e performance.
           Nosso compromisso é com sua qualidade de vida e bem-estar.
         </p>
-        <a href="#" class="btn  btn-lg"
+        <a href="../pages/produtos.html" class="btn  btn-lg"
           style="background: linear-gradient(90deg, rgb(255, 140, 0), rgb(106, 13, 173)); color: #ffffff; border: none;">Conheça
           nossos produtos</a>
       </div>
