--- a/site certo certo/pages/pagamento.html
+++ b/site certo certo/pages/pagamento.html
@@ -22,7 +22,7 @@
   <nav class="navbar sticky-top navbar-expand-lg navbar-dark"
     style="background: linear-gradient(90deg, rgb(255, 140, 0), rgb(106, 13, 173));">
     <div class="container">
-      <a class="navbar-brand" href="Abrir por aqui.html">
+      <a class="navbar-brand" href="home.html">
         <img src="../imagens/logo-completa.png" alt="Logo da Empresa" height="60">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -32,7 +32,7 @@
 
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto">
-          <li class="nav-item"><a class="nav-link active fs-5" href="Abrir por aqui.html">Início</a></li>
+          <li class="nav-item"><a class="nav-link active fs-5" href="home.html">Início</a></li>
           <li class="nav-item"><a class="nav-link fs-5" href="#">Produtos</a></li>
           <li class="nav-item"><a class="nav-link fs-5" href="#">Contato</a></li>
         </ul>
