--- a/site certo certo/pages/home.html
+++ b/site certo certo/pages/home.html
@@ -44,6 +44,7 @@
 
           </div>
         </div>
+        <button type="button" class="btn btn-light" onclick="location.href='../pages/Login.html'">Entrar</button>
       </div>
     </nav>
 
