--- a/site certo certo/pages/pagamento.html
+++ b/site certo certo/pages/pagamento.html
@@ -19,26 +19,30 @@
 
 <body style="background-color: rgba(106, 13, 173, 0.5);">
   <!-- Navbar -->
-  <nav class="navbar sticky-top navbar-expand-lg navbar-dark"
-    style="background: linear-gradient(90deg, rgb(255, 140, 0), rgb(106, 13, 173));">
-    <div class="container">
-      <a class="navbar-brand" href="home.html">
-        <img src="../imagens/logo-completa.png" alt="Logo da Empresa" height="60">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Alternar navegação">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+ <nav class="navbar sticky-top  navbar-expand-lg navbar-dark"
+      style="background: linear-gradient(90deg, rgb(255, 140, 0), rgb(106, 13, 173));">
+      <div class="container">
+        <a class="navbar-brand" href="../pages/home.html">
+          <img src="../imagens/logo-completa.png" alt="Logo" height="60">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav mx-auto">
-          <li class="nav-item"><a class="nav-link active fs-5" href="home.html">Início</a></li>
-          <li class="nav-item"><a class="nav-link fs-5" href="#">Produtos</a></li>
-          <li class="nav-item"><a class="nav-link fs-5" href="#">Contato</a></li>
-        </ul>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav mx-auto">
+            <li class="nav-item"><a class="nav-link active fs-5" href="../pages/home.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link fs-5" href="../pages/produtos.html">Produtos</a></li>
+            <li class="nav-item"><a class="nav-link fs-5" href="../pages/SUPORTE.html">Contato</a></li>
+          </ul>
+          <div class="d-flex gap-2">
+
+          </div>
+        </div>
+        <button type="button" class="btn btn-light" onclick="location.href='../pages/Login.html'">Entrar</button>
       </div>
-    </div>
-  </nav>
+    </nav>  
 
   <!-- Breadcrumb -->
  
