--- a/site certo certo/pages/produtos.html
+++ b/site certo certo/pages/produtos.html
@@ -217,15 +217,30 @@
 <body>
 
   <!-- HEADER -->
-  <header>
-    <img src="../imagens/logo_sem_fundo (1).png" alt="Logo Nexpharm" class="logo">
-    <nav>
-      <a href="../pages/home.html">Início</a>
-      <a href="../pages/produtos.html">Produtos</a>
-      <a href="../pages/SUPORTE.html">Suporte</a>
+<nav class="navbar sticky-top  navbar-expand-lg navbar-dark"
+      style="background: linear-gradient(90deg, rgb(255, 140, 0), rgb(106, 13, 173));">
+      <div class="container">
+        <a class="navbar-brand" href="../pages/home.html">
+          <img src="../imagens/logo-completa.png" alt="Logo" height="60">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav mx-auto">
+            <li class="nav-item"><a class="nav-link active fs-5" href="../pages/home.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link fs-5" href="../pages/produtos.html">Produtos</a></li>
+            <li class="nav-item"><a class="nav-link fs-5" href="../pages/SUPORTE.html">Contato</a></li>
+          </ul>
+          <div class="d-flex gap-2">
+
+          </div>
+        </div>
+        <button type="button" class="btn btn-light" onclick="location.href='../pages/Login.html'">Entrar</button>
+      </div>
     </nav>
-    <button class="btn-login" onclick="location.href='../pages/Login.html'">Entrar</button>
-  </header>
 
   <!-- BARRA DE PESQUISA -->
   <div class="search-bar">
@@ -257,7 +272,7 @@
         </div>
     </div>
     <div class="card-footer d-flex justify-content-between bg-light">
-        <button class="btn btn-orangered btn-sm">Comprar</button>
+        <button class="btn comprar btn-orangered btn-sm">Comprar</button>
         <button class="btn btn-outline-secondary btn-sm"><i class="bi bi-heart"></i></button>
     </div>
 </div>
@@ -463,7 +478,7 @@
     <div id="cart-items"></div>
     <p id="empty-cart">Seu carrinho está vazio.</p>
     <p id="total-price"><strong>Total:</strong> R$ 0,00</p>
-    <button id="checkout-btn">Finalizar Compra</button>
+    <a href="../pages/pagamento.html"><button id="checkout-btn">Finalizar Compra</button></a>
   </div>
 
   <script>
