--- a/site certo certo/pages/produtos.html
+++ b/site certo certo/pages/produtos.html
@@ -150,10 +150,10 @@
 
     #cart-container {
       position: fixed;
-      top: 0;
+      top: 9%;
       right: -320px;
       width: 300px;
-      height: 100%;
+      height: 91%;
       background-color: white;
       border-left: 2px solid #ccc;
       box-shadow: -4px 0 12px rgba(0,0,0,0.1);
